--- a/force-app/main/default/classes/HCPTrialBuilder.cls
+++ b/force-app/main/default/classes/HCPTrialBuilder.cls
@@ -10,7 +10,7 @@ public with sharing class HCPTrialBuilder extends TrialBuilder {
         this(trialId,null);
     }
     public HCPTrialBuilder(String trialId, String delegateId) {
-        super(trialId);
+        setTrial(trialId);
         this.hcpEnrollment = HCPEnrollmentService.getHCPEnrollmentForHCPByTrial(trialId,delegateId);
         this.studyAction = this.getStudyActions();
         this.trialDetail.tabs = this.getStudyTabs();
