--- a/force-app/main/default/classes/TrialBuilder.cls
+++ b/force-app/main/default/classes/TrialBuilder.cls
@@ -6,16 +6,14 @@ public abstract with sharing class TrialBuilder {
     protected TrialDetail trialDetail;
     protected String trialId;
     protected StudyActions studyAction;
-    public TrialBuilder(String trialId) {
+    
+    public void setTrial(String trialId) {
         this.trialId = trialId;
         TrialDetail trialDetail = new TrialDetail();
         trialDetail.trial = TrialService.getTrial(trialId);
         trialDetail.accountEnrollmentsList = new List<TrialDetail.ClinicWrapper>();
         trialDetail.isTCAccepted = TermsAndConditions.isTCAccepted(trialDetail.trial.Terms_And_Conditions_ID__c);
         this.trialDetail = trialDetail;
-
-    }
-    public TrialBuilder() {
 
     }
 
