--- a/force-app/main/tests/classes/Test_BaseCRCPCommunity.cls
+++ b/force-app/main/tests/classes/Test_BaseCRCPCommunity.cls
@@ -608,7 +608,7 @@ private class Test_BaseCRCPCommunity {
             AccountSettingsController.changePassword('Dd231324d13', 'Dd231324d13', '11111');
             ClinicProfileRemote.getClinicProfileData(hcpAccount.Id);
             CommunityFacadeRemote.getCommunityData();
-            CommunityFacadeRemote.changeMode(CommunityService.USER_MODE_PI, null);
+            CommunityFacadeRemote.changeMode(CommunityService.USER_MODE_PI, null, null);
         }
         Test.stopTest();
     }
