--- a/force-app/main/default/classes/TravelSupportService.cls
+++ b/force-app/main/default/classes/TravelSupportService.cls
@@ -4,14 +4,17 @@
 
 public with sharing class TravelSupportService {
 
-    public List<TravelVendor__c> getVendors() {
+    public List<TravelVendor__c> getVendors(Id ) {
         try {
             String vendorsQuery = 'SELECT ' +
-                    'Name, ' +
                     'Id, ' +
-                    'Link_Vendor__c, ' +
-                    'Disclosure__c ' +
-                    'FROM TravelVendor__c ';
+                    'TravelVendor__c, ' +
+                    'TravelVendor__r.Name, ' +
+                    'TravelVendor__r.Link_Vendor__c, ' +
+                    'TravelVendor__r.Disclosure__c, ' +
+                    'FROM TravelVendorSettings__c '+
+                    'WHERE Study_Site__c '+
+            ;
             return ((DatabaseProxy) ClassFactory.newInstance(DatabaseProxy.class)).query(vendorsQuery, true);
         } catch (Exception e) {
             AuraHelper.throwException(e);
