REF-382 REF-382 Disable Decline Referral Option by Referral Source (ePR and Vendor Referrals)
REF-382 Disable Decline Referral Option by Referral Source (ePR and Vendor Referrals)

--- a/force-app/main/default/classes/ParticipantEnrollmentService.cls
+++ b/force-app/main/default/classes/ParticipantEnrollmentService.cls
@@ -349,6 +349,7 @@ public without sharing class ParticipantEnrollmentService {
             'Referral_ID__c',
             'Referral_Source__c',
             'Referral_Completedby_Name__c',
+            'Source_Type__c',
             'Study_Name__c',
             'Study_Site__c',
             'Study_Site__r.Name',
